--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 <body>
   
 <div class="container">
-    <iframe src="https://www.youtube.com/embed/cbAfhBNQ2qU?start=20&end=84"></iframe>
+    <iframe src="https://www.youtube.com/embed/cbAfhBNQ2qU?start=20&end=84" 
+      allowfullscreen="allowfullscreen"
+        mozallowfullscreen="mozallowfullscreen" 
+        msallowfullscreen="msallowfullscreen" 
+        oallowfullscreen="oallowfullscreen" 
+        webkitallowfullscreen="webkitallowfullscreen"></iframe>
 </div>
 
 <script>
