--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-  <meta name="description" content="Webpage description goes here" />
+  <meta name="weblink" content="weblink" />
   <meta charset="utf-8">
-  <title>Change_me</title>
+  <title>Weblink</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="">
+  <meta name="author" content="William Carbonneau">
   <link rel="stylesheet" href="css/style.css">
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src=""></script>
 </head>
 
 <body>
